[package]
name = "myradio-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] } 
tokio-util = { version = "*", features = ["full"] }
http = "*"
bytes="*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httpdate="*"
httparse = "1.0"
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-util = "0.3"